Changes in backend. Testes CRUD operations.